--- a/stencil-lib/src/components/nav-menu/nav-menu-item/nav-menu-item.scss
+++ b/stencil-lib/src/components/nav-menu/nav-menu-item/nav-menu-item.scss
@@ -32,11 +32,7 @@
   }
 
   > cpy-icon {
-    @apply icon-size-6;
-    
-    i {
-      @apply align-baseline;
-    }
+    @apply icon-size-6 align-baseline;
   }
 
   &__title {
